--- a/src/index.css
+++ b/src/index.css
@@ -114,10 +114,10 @@ input[type="radio"]{
   width: 350px;
   height: 50px;
   font-size: var(--fs-m);
+  font-weight: 700;
   text-align: center;
   padding: .5rem;
-  margin: 1rem;
-  border-radius: var(--br-soft);
+  margin: 2rem 0;
 }
 
 @media (max-width: 700px) {
