--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-/*
-Author: Cassie Lewis
-https://clewisdev.com
-Date: 
-*/
-
 /****** VARIABLES ******/
 
 :root {
@@ -15,11 +9,10 @@ Date:
   --accent-color:  #4343da;
   --accent-color-two: #2c9e2c;  
   --focus-color: #e75d5d;
-
   
   /*BORDER RADIUS*/
-  --br-small: .25rem;
-  --br-soft: 1rem;
+  --br-small: .5rem;
+  --br-soft: 1.5rem;
   --br-round: 50%;
   
   /*FONT SIZES*/
@@ -41,13 +34,13 @@ Date:
 /*CSS FROM PROJECT FILES*/
 body {
   background-color: var(--body-bg);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+  font-family: 'Poppins', sans-serif;  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -57,6 +50,8 @@ code {
 input[type="radio"]{
   display: none;
 }
+
+/*====== lAYOUT ======*/
 
 .radio-container {
   display: flex;
@@ -70,28 +65,27 @@ input[type="radio"]{
   background-color: var(--bg);
   padding: 2rem;
   border: 2px solid #333;
-  border-radius: var(--br-soft);
+  border-radius: var(--br-small);
   box-shadow: 1rem 1rem #777;
 
   display: flex;
   gap: 2rem;
-  }
+}
 
-.radio-legend {
+/*====== LEGEND AND LABEL STYLING ======*/
+
+ .radio-legend {
   background-color: var(--accent-color);
+  font-size: var(--fs-l);
   color: var(--text-color);
   font-weight: 600;
   padding: 1rem 2rem;
   margin: 0 auto 2rem auto;
-  border-radius: var(--br-soft);
+  border-radius: var(--br-small);
 }
 
-.radio-legend,
 .radio-field label {
   font-size: var(--fs-l);
-}
-
-.radio-field label {
   text-align: center;
   padding: 1.5rem;
   border-radius: var(--br-small);
@@ -110,15 +104,8 @@ input[type="radio"]{
   outline: 3px solid var(--focus-color); 
 }
 
-.selection {
-  width: 350px;
-  height: 50px;
-  font-size: var(--fs-m);
-  font-weight: 700;
-  text-align: center;
-  padding: .5rem;
-  margin: 2rem 0;
-}
+
+/*====== MEDIA QUERY ======*/
 
 @media (max-width: 700px) {
   .radio-field {
